HIL/src/objects/Savings_Contribution__c.object
<CustomObject>
    <description>Custom object to track savings and contributions for a client&apos;s financial plan.</description>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Savings/Contributions</relationshipLabel>
        <relationshipName>Savings_Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Plan__c</fullName>
        <label>Financial Plan</label>
        <referenceTo>Financial_Plan__c</referenceTo>
        <relationshipLabel>Savings/Contributions</relationshipLabel>
        <relationshipName>Savings_Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Savings/Contributions</relationshipLabel>
        <relationshipName>Savings_Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Taxed_Status__c</fullName>
        <label>Taxed Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After-Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Savings/Contribution</label>
    <nameField>
        <label>Account/Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings/Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>